fix display bugs on smaller screen + black and white photos

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,7 +11,7 @@ html {
   --second-color-light: #e9f2f1;
   --second-color-dark: #101b27;
 
-  --accent-color: #c3dcd9;
+  --accent-color: #E9F2F1;
 }
 
 * {
@@ -92,7 +92,7 @@ main > header section > a > button:nth-of-type(1) {
   font-weight: bold;
 }
 main > header section > p {
-  font-size: clamp(1rem, 1.6vw, 1.4rem);
+  font-size: clamp(1rem, 1.2vw, 1.4rem);
 }
 
 main > section > a > header > h2 {
@@ -108,7 +108,6 @@ main > section > article > section > h3 {
 main > section > article > section > p {
   font-size: clamp(1rem, 1.6vw, 1.5rem);
 }
-
 
 /* ---------- buttons ---------- */
 .button {
@@ -140,7 +139,7 @@ main > section > article > section > p {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: #E6D0BD;
+  background: #e6d0bd;
   border-radius: 0.85rem;
   overflow: hidden;
   transition: transform 0.4s cubic-bezier(0.1, 0, 0.3, 1);
@@ -169,7 +168,7 @@ main > section > article > section > p {
 
 .button--bestia:hover .button__bg::before {
   transition: transform 0.4s cubic-bezier(0.1, 0, 0.3, 1);
-  transform: translate3d(-50%, -50%, 0) scale3d(1, 1, 1);  
+  transform: translate3d(-50%, -50%, 0) scale3d(1, 1, 1);
 }
 
 .button--bestia .button__bg::after {
@@ -184,7 +183,7 @@ main > section > article > section > p {
 .button--bestia:hover .button__bg::after {
   opacity: 1;
   transition-duration: 0.01s;
-  transition-delay: 0.3s;  
+  transition-delay: 0.3s;
 }
 
 .button--bestia span {
@@ -196,9 +195,8 @@ main > section > article > section > p {
 }
 
 .button--bestia span:hover {
-  color: #FEFDFC;
+  color: #fefdfc;
 }
-
 
 /* ---------- left and right menus ---------- */
 menu,
@@ -213,7 +211,7 @@ aside {
 }
 
 menu {
-  margin-left: 1vw;
+  margin-left: 3%;
 }
 menu > a > li:hover {
   list-style: disc;
@@ -232,7 +230,7 @@ aside > a > img {
 
 /* ---------- main ---------- */
 main {
-  width: 97%;
+  width: 94%;
 }
 
 /* ---------- SVG Morph ---------- */
@@ -330,14 +328,13 @@ main > section > a > header > h2 {
 }
 
 main > section > article {
-  height: 80vh;
-  display: flex;  
+  height: 100vh;
+  display: flex;
 }
 
 main > section > article > section {
   width: 40vw;
-  margin-top: 5vh;
-  padding-top: 10vh;
+  padding-top: 5vh;
 }
 main > section > article:nth-of-type(1) > section,
 main > section > article:nth-of-type(3) > section {
@@ -361,6 +358,7 @@ main > section > article > img {
   height: 50vh;
   object-fit: cover;
   border-radius: 30px;
+  mix-blend-mode:screen;
 }
 main > section > article:nth-of-type(1) > img,
 main > section > article:nth-of-type(3) > img {
